WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106369
WebKit does not reject some cubic-bezier form values for transition-timing-function.
https://bugs.webkit.org/show_bug.cgi?id=106369
Summary
WebKit does not reject some cubic-bezier form values for transition-timing-fu...
Alexis Menard (darktears)
Reported
2013-01-08 13:04:40 PST
WebKit does not reject some cubic-bezier form values for transition-timing-function.
Attachments
Patch
(13.82 KB, patch)
2013-01-08 13:09 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Patch
(15.92 KB, patch)
2013-01-08 13:15 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2013-01-08 13:07:17 PST
As per discussion on
https://bugs.webkit.org/show_bug.cgi?id=105426#c9
we should reject cubic-bezier values where x values exceed the range [0,1].
Alexis Menard (darktears)
Comment 2
2013-01-08 13:09:58 PST
Created
attachment 181741
[details]
Patch
Alexis Menard (darktears)
Comment 3
2013-01-08 13:15:04 PST
Created
attachment 181742
[details]
Patch
Peter Beverloo
Comment 4
2013-01-08 13:42:16 PST
Ah, that makes sense. Thanks :-)!
WebKit Review Bot
Comment 5
2013-01-08 13:45:44 PST
Comment on
attachment 181742
[details]
Patch Clearing flags on attachment: 181742 Committed
r139106
: <
http://trac.webkit.org/changeset/139106
>
WebKit Review Bot
Comment 6
2013-01-08 13:45:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug